# curlifier

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CURL_COMMANDS.md  Makefile  README.md  TODO.md  pyproject.toml  ruff.toml  setup.cfg
.github/workflows/: coverage.yaml  dependabot.yml  lint.yaml  tests.yaml
curlifier/: __init__.py  api.py  configurator.py  curl.py  main.py  transmitter.py
curlifier/_debug/: __init__.py  _main.py
curlifier/builders/: base.py  configurator.py  curl.py  exceptions.py  transmitter.py
curlifier/structures/: commands.py  curl_commands.py  http_methods.py  types.py
tests/: conftest.py  test_api.py  test_configurator.py  test_curl.py  test_transmitter.py  test_version.py
tests/builders/: conftest.py  test_configurator.py  test_curl.py  test_transmitter.py
tests/files/: f.txt
tests/structures/: test_commands.py  test_http_methods.py
